Remove PCEPCapability.isStateful()
This is a useless method leaking a particular capability. Remove it and
adjust users.

JIRA: BGPCEP-960
Change-Id: Iedf491ef8f276ea27acca9ac40892200c857dc23
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>